# auraed-webiste

./: README.md
app/: .env  package-lock.json  package.json  (+2 more)
server/: .env.example  .gitignore  bun.lockb  models.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_migrations.sh  tortoise_config.py  tsconfig.json
server/api/: __init__.py  root.py
server/config/: __init__.py  db.py
server/prisma/: schema.prisma
server/prisma/migrations/20220810110643_initial_migration/: migration.sql
server/prisma/migrations/20220825080449_made_url_field_in_event_optional/: migration.sql
server/prisma/migrations/20220825091314_remove_content_and_change_thumbnail_url_to_thumbnail_in_blog_model/: migration.sql
server/prisma/migrations/20220827174046_add_album_table/: migration.sql
server/prisma/migrations/20220930202638_/: migration.sql
server/prisma/migrations/20220930205440_/: migration.sql
server/src/: app.ts  config.ts  server.ts
server/src/@types/: express.d.ts  index.d.ts
server/src/controllers/: albumController.ts  authController.ts  blogController.ts  courseController.ts  crudControllers.ts  eventController.ts  galleryController.ts  metaController.ts  uploadController.ts
server/src/dto/: album.dto.ts  auth.dto.ts  blogs.dto.ts  course.dto.ts  events.dto.ts  metadata.dto.ts
server/src/middlewares/: hasRole.ts  isAuthenticated.ts
server/src/models/: blogModel.ts  eventModel.ts  galleryModel.ts
server/src/routes/: blogRoutes.ts  eventRoutes.ts  galleryRoutes.ts
server/src/utils/: appError.ts  errorUtils.ts  validateBody.ts
(+37 files in other folders)
